# RenderDocMCP_SunSan

./: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  renderdoc_mcp_server.py
mcp_server/: server.py
renderdoc_extension/: renderdoc_facade.py  request_handler.py
renderdoc_extension/converters/: __init__.py  format_detector.py  image_exporter.py  texture_converter.py
renderdoc_extension/services/: resource_service.py
