[project]
name = "renderdocmcp-sunsan"
version = "0.1.0"
description = "MCP server for RenderDoc automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.8.0",
]

[project.scripts]
renderdocmcp = "renderdoc_mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
